--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,30 +1,40 @@
 h1 {
-font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .formstyle {
-font-family: Arial, Helvetica, sans-serif;
-position: relative;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+}
+
+#name,
+#title,
+#content {
+  height: 50px;
+  width: 400px;
+}
+
+#sbutton {
+  right: 30px; 
 }
 
 img {
   width: 555px;
-
 }
 
 .split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-  
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
 .right {
-    right: 0;
-  }
+  right: 0;
+}
 
 /* dark/light mode switch */
 .toggle {
@@ -37,10 +47,9 @@ img {
 
 /* Dark Mode */
 .dark {
-  background-color:#243447;
+  background-color: #243447;
   height: 100vh;
-  color: #bebebe
- 
+  color: #bebebe;
 }
 
 .dark li a {
@@ -53,7 +62,7 @@ img {
 
 /* Light Mode */
 .light {
-  background-color:white;
+  background-color: white;
   color: black;
   height: 100vh;
 }
@@ -90,8 +99,8 @@ img {
   right: 0;
   bottom: 0;
   background-color: whitesmoke;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -102,8 +111,8 @@ img {
   left: 4px;
   bottom: 4px;
   background-color: #111;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
@@ -147,7 +156,7 @@ input:checked + .slider:before {
 /* Large smartphones - navbar changes color */
 @media screen and (max-width: 768px) {
   form {
-    background-color:red;
+    background-color: red;
   }
 }
 
